# X-Gamepad

./: .gitignore  50-x_pad.rules  CMakeLists.txt  Makefile  README.md  build.sh  buildAll.ps1  buildAll.sh  x_gamepad.c  x_gamepad.cpp  x_gamepad.vcxproj  x_pad.cpp  x_pad.vcxproj
lib/hidapi/: libhidapi.dylib
x_gamepad.xcodeproj/: project.pbxproj
x_pad.xcodeproj/: project.pbxproj
x_pad.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
x_pad.xcodeproj/project.xcworkspace/xcshareddata/: x_pad.xccheckout
